--- a/PKGBUILD.in
+++ b/PKGBUILD.in
@@ -1,6 +1,6 @@
 # Maintainer: Daniel Dada <dan@binarygoose.dev>
 pkgname=clrsync
-pkgver=0.1.0
+pkgver=@PROJECT_VERSION@
 pkgrel=1
 pkgdesc="Color scheme manager"
 arch=('x86_64')
