--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,17 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "CLI",
+            "name": "Debug current target",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/builddir/clrsync_cli",
+            "program": "${command:cmake.launchTargetPath}",
             "args": [
                 "--apply",
                 "--theme",
                 "dark"
             ],
-            "preLaunchTask": "Build (meson)",
             "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/builddir",
+            "cwd": "${workspaceFolder}",
             "environment": [],
             "externalConsole": false,
             "MIMode": "gdb",
@@ -33,34 +32,5 @@
                 }
             ]
         },
-        {
-            "name": "GUI",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/builddir/clrsync_gui",
-            "args": [
-                "--apply",
-                "--theme",
-                "dark"
-            ],
-            "preLaunchTask": "Build (meson)",
-            "stopAtEntry": false,
-            "cwd": "${workspaceFolder}/builddir",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
-        }
     ]
 }
