--- a/example_config/templates/kitty.conf
+++ b/example_config/templates/kitty.conf
@@ -1,32 +1,40 @@
-cursor              {foreground}
+cursor              {cursor}
 cursor_text_color   {background}
 
 foreground            {foreground}
 background            {background}
-selection_foreground  {foreground_secondary}
+selection_foreground  {on_surface}
 selection_background  {surface}
 url_color             {accent}
 
-color8      {surface_variant}
-color0      {background}
+# Base colors (dark variants)
+color0      {base00}
+color8      {base08}
 
-color1      {term_red}
-color9      {term_red_bright}
+# Red
+color1      {base01}
+color9      {base09}
 
-color2      {term_green}
-color10     {term_green_bright}
+# Green
+color2      {base02}
+color10     {base0A}
 
-color3      {term_yellow}
-color11     {term_yellow_bright}
+# Yellow
+color3      {base03}
+color11     {base0B}
 
-color4      {term_blue}
-color12     {term_blue_bright}
+# Blue
+color4      {base04}
+color12     {base0C}
 
-color5      {term_magenta}
-color13     {term_magenta_bright}
+# Magenta
+color5      {base05}
+color13     {base0D}
 
-color6      {term_cyan}
-color14     {term_cyan_bright}
+# Cyan
+color6      {base06}
+color14     {base0E}
 
-color15     {term_white_bright}
-color7      {term_white}
+# White
+color7      {base07}
+color15     {base0F}
