create windows installed with nsis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,14 @@ include(GNUInstallDirs)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+if(WIN32)
+    set(CMAKE_INSTALL_PREFIX "C:/Program Files/clrsync")
+    set(CMAKE_INSTALL_BINDIR "bin")
+    set(CMAKE_INSTALL_LIBDIR "lib")
+    set(CMAKE_INSTALL_DATADIR "share")
+    set(CMAKE_INSTALL_FULL_DATADIR "${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_DATADIR}")
+endif()
+
 set(CMAKE_SKIP_BUILD_RPATH FALSE)
 set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
@@ -122,33 +130,78 @@ target_compile_definitions(imgui PUBLIC IMGUI_ENABLE_FREETYPE)
 
 install(TARGETS clrsync_core
         LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        COMPONENT Core
 )
 
 install(TARGETS clrsync_cli
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        COMPONENT CLI
 )
 
 install(TARGETS clrsync_gui
         RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+        COMPONENT GUI
 )
 
 install(FILES
         example_config/config.toml
         DESTINATION ${CMAKE_INSTALL_DATADIR}/clrsync
+        COMPONENT Core
 )
 
 install(DIRECTORY example_config/templates
         DESTINATION ${CMAKE_INSTALL_DATADIR}/clrsync
+        COMPONENT Core
         FILES_MATCHING PATTERN "*"
 )
 
 install(DIRECTORY example_config/palettes
         DESTINATION ${CMAKE_INSTALL_DATADIR}/clrsync
+        COMPONENT Core
         FILES_MATCHING PATTERN "*.toml"
 )
 
 if(UNIX AND NOT APPLE)
     install(FILES resources/clrsync.desktop
         DESTINATION ${CMAKE_INSTALL_DATADIR}/applications
+        COMPONENT Core
     )
 endif()
+
+set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
+set(CPACK_COMPONENTS_ALL Core GUI CLI)
+
+set(CPACK_PACKAGE_NAME "clrsync")
+set(CPACK_PACKAGE_VENDOR "Daniel Dada")
+set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
+set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Color scheme manager")
+
+set(CPACK_COMPONENTS_ALL Core GUI CLI)
+set(CPACK_COMPONENT_CORE_DISPLAY_NAME "Core Library")
+set(CPACK_COMPONENT_CORE_DESCRIPTION "clrsync core library and default configs (required)")
+set(CPACK_COMPONENT_CORE_REQUIRED ON)
+set(CPACK_COMPONENT_GUI_DISPLAY_NAME "GUI Application")
+set(CPACK_COMPONENT_GUI_DESCRIPTION "clrsync GUI app")
+set(CPACK_COMPONENT_GUI_DEPENDS Core)
+set(CPACK_COMPONENT_CLI_DISPLAY_NAME "Command Line Tool")
+set(CPACK_COMPONENT_CLI_DESCRIPTION "clrsync CLI app")
+set(CPACK_COMPONENT_CLI_DEPENDS Core)
+
+set(CPACK_GENERATOR "NSIS")
+
+set(CPACK_NSIS_INSTALLED_NAME "clrsync")
+set(CPACK_NSIS_INSTALL_ROOT "$PROGRAMFILES64")
+
+set(CPACK_NSIS_MODIFY_PATH ON)
+set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
+
+set(CPACK_NSIS_MENU_LINKS "bin/clrsync_gui.exe" "clrsync")
+set(CPACK_NSIS_CREATE_DESKTOP_LINKS "bin/clrsync_gui.exe;clrsync")
+
+message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+message(STATUS "CMAKE_INSTALL_DATADIR: ${CMAKE_INSTALL_DATADIR}")
+message(STATUS "CMAKE_INSTALL_FULL_DATADIR: ${CMAKE_INSTALL_FULL_DATADIR}")
+message(STATUS "CMAKE_SIZEOF_VOID_P: ${CMAKE_SIZEOF_VOID_P}")
+
+include(CPack)
