build :add rpm config (untested)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,7 +188,7 @@ set(CPACK_COMPONENT_CLI_DISPLAY_NAME "Command Line Tool")
 set(CPACK_COMPONENT_CLI_DESCRIPTION "clrsync CLI app")
 set(CPACK_COMPONENT_CLI_DEPENDS Core)
 
-set(CPACK_GENERATOR "NSIS")
+set(CPACK_GENERATOR "NSIS;DEB;RPM")
 
 set(CPACK_NSIS_INSTALLED_NAME "clrsync")
 set(CPACK_NSIS_INSTALL_ROOT "$PROGRAMFILES64")
@@ -199,13 +199,15 @@ set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
 set(CPACK_NSIS_MENU_LINKS "bin/clrsync_gui.exe" "clrsync")
 set(CPACK_NSIS_CREATE_DESKTOP_LINKS "bin/clrsync_gui.exe;clrsync")
 
-set(CPACK_GENERATOR "DEB")
-set(CPACK_PACKAGE_NAME "clrsync")
-set(CPACK_PACKAGE_VERSION ${PROJECT_VERSION})
 set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Daniel Dada <dan@binarygoose.dev>")
 set(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.31), libglfw3, libfreetype6")
 set(CPACK_DEBIAN_PACKAGE_SECTION "utils")
 set(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+
+set(CPACK_RPM_PACKAGE_LICENSE "MIT")
+set(CPACK_RPM_PACKAGE_GROUP "Applications/System")
+set(CPACK_RPM_PACKAGE_URL "https://github.com/obsqrbtz/clrsync")
+set(CPACK_RPM_PACKAGE_REQUIRES "freetype, glfw, fontconfig")
 
 message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
 message(STATUS "CMAKE_INSTALL_FULL_DATADIR: ${CMAKE_INSTALL_FULL_DATADIR}")
