--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,11 @@ if(WIN32)
         GIT_REPOSITORY https://github.com/glfw/glfw.git
         GIT_TAG 3.3.10
     )
+	
+    set(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
+    set(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
+
     FetchContent_MakeAvailable(glfw)
 
 else()
