--- a/.github/workflows/Test packages.yml
+++ b/.github/workflows/Test packages.yml
@@ -20,11 +20,12 @@ jobs:
     
     - name: Install dependencies
       run: |
-        apt-get update
-        apt-get install -y cmake build-essential \
-          libgl1-mesa-dev libglu1-mesa-dev \
-          libx11-dev libxrandr-dev libxinerama-dev libxcursor-dev libxi-dev \
-          libglfw3-dev libfreetype6-dev
+        sudo apt-get update
+        sudo apt-get install -y cmake build-essential git \
+          libglfw3-dev libfreetype6-dev libfontconfig1-dev \
+          libx11-dev libxrandr-dev libxi-dev \
+          mesa-common-dev libgl1-mesa-dev libglu1-mesa-dev \
+          libxinerama-dev libxcursor-dev
     
     - name: Configure CMake
       run: |
@@ -40,8 +41,8 @@ jobs:
     
     - name: Install DEB
       run: |
-        dpkg -i build/*.deb || true
-        apt-get install -f -y
+        sudo dpkg -i build/*.deb || true
+        sudo apt-get install -f -y
     
     - name: Test installation
       run: |
@@ -63,9 +64,10 @@ jobs:
     - name: Install dependencies
       run: |
         dnf install -y cmake gcc gcc-c++ make rpm-build git \
+          glfw-devel freetype-devel fontconfig-devel \
+          libX11-devel libXrandr-devel libXi-devel \
           mesa-libGL-devel mesa-libGLU-devel \
-          libX11-devel libXrandr-devel libXinerama-devel libXcursor-devel libXi-devel \
-          glfw-devel freetype-devel
+          libXinerama-devel libXcursor-devel
     
     - name: Checkout
       uses: actions/checkout@v4
