--- a/.github/workflows/Test packages.yml
+++ b/.github/workflows/Test packages.yml
@@ -29,7 +29,7 @@ jobs:
     
     - name: Configure CMake
       run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_BUILD_TYPE=Release -DUSE_SYSTEM_GLFW=OFF
     
     - name: Build
       run: cmake --build build --config Release
@@ -77,7 +77,7 @@ jobs:
     
     - name: Configure CMake
       run: |
-        cmake -B build -DCMAKE_BUILD_TYPE=Release
+        cmake -B build -DCMAKE_BUILD_TYPE=Release -DUSE_SYSTEM_GLFW=ON
     
     - name: Build
       run: cmake --build build --config Release
