ci: removed extra build for windows

--- a/.github/workflows/Test NSIS.yml
+++ b/.github/workflows/Test NSIS.yml
@@ -29,8 +29,7 @@ jobs:
         run: cmake --build build --config Release
 
       - name: Generate NSIS installer
-        run: cmake --build build --config Release \
-             cd build \\
+        run: cd build && \\
              cpack -G NSIS
 
       - name: Upload installer
