--- a/.github/workflows/Test packages.yml
+++ b/.github/workflows/Test packages.yml
@@ -1,9 +1,9 @@
 name: Test DEB and RPM Packages
 
 on:
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
   pull_request:
     branches:
       - master
