ci: merged windows and linux builds

--- a/.github/workflows/Test NSIS.yml
+++ b/.github/workflows/Test NSIS.yml
@@ -1,9 +1,9 @@
 name: Build NSIS Installer
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
+  # push:
+  #   branches: [ "master" ]
+  # pull_request:
 
 jobs:
   build-windows:
