--- a/.github/workflows/Test flake.yml
+++ b/.github/workflows/Test flake.yml
@@ -2,8 +2,9 @@ name: Test flake.nix
 
 on:
   push:
-    branches: [master]
+    branches: master
   pull_request:
+    branches: master
 
 jobs:
   build:
