--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,27 +26,35 @@ set(CMAKE_BUILD_WITH_INSTALL_RPATH FALSE)
 set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
 set(CMAKE_INSTALL_RPATH "$ORIGIN/../${CMAKE_INSTALL_LIBDIR}")
 
-find_package(Git)
-
-execute_process(
-  COMMAND git describe --tags --long --always
-  WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
-  OUTPUT_VARIABLE GIT_DESCRIBE
-  OUTPUT_STRIP_TRAILING_WHITESPACE
-  ERROR_QUIET
-)
-
-if(GIT_DESCRIBE MATCHES "^[vV]?[0-9]+\\.[0-9]+\\.[0-9]+-[0-9]+-g[0-9a-f]+")
-  string(REGEX REPLACE
-    "^[vV]?([0-9]+\\.[0-9]+\\.[0-9]+)-([0-9]+)-g([0-9a-f]+)"
-    "\\1+\\2.git.g\\3"
-    SEMVER "${GIT_DESCRIBE}"
-  )
-elseif(GIT_DESCRIBE)
-  set(SEMVER "${PROJECT_VERSION}+0.git.${GIT_DESCRIBE}")
+if(DEFINED CLRSYNC_SEMVER)
+  set(SEMVER "${CLRSYNC_SEMVER}")
 else()
-  set(SEMVER "${PROJECT_VERSION}")
+  find_package(Git QUIET)
+
+  if(GIT_FOUND AND EXISTS "${CMAKE_SOURCE_DIR}/.git")
+    execute_process(
+      COMMAND git describe --tags --long --always
+      WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
+      OUTPUT_VARIABLE GIT_DESCRIBE
+      OUTPUT_STRIP_TRAILING_WHITESPACE
+      ERROR_QUIET
+    )
+  endif()
+
+  if(GIT_DESCRIBE MATCHES "^[vV]?[0-9]+\\.[0-9]+\\.[0-9]+-[0-9]+-g[0-9a-f]+")
+    string(REGEX REPLACE
+      "^[vV]?([0-9]+\\.[0-9]+\\.[0-9]+)-([0-9]+)-g([0-9a-f]+)"
+      "\\1+\\2.git.g\\3"
+      SEMVER "${GIT_DESCRIBE}"
+    )
+  elseif(GIT_DESCRIBE)
+    set(SEMVER "${PROJECT_VERSION}+0.git.${GIT_DESCRIBE}")
+  else()
+    set(SEMVER "${PROJECT_VERSION}")
+  endif()
 endif()
+
+message(STATUS "clrsync version: ${SEMVER}")
 
 configure_file(
     ${CMAKE_SOURCE_DIR}/src/core/version.hpp.in
